@@ -26,6 +26,8 @@
   the debug methods work now, as they should.
 - Bugfix: The rewriting of singleton classes in the pool does not
   work.
+- Bugfix: Adding additional data in the code generation is not
+  rendered.
 
 3.0.2
 - Added classname to the declaration analysis of properties.
